# aetheris_opensource

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
aetheris/: Cargo.toml
aetheris/src/: lib.rs
aetheris/src/assets/: dehacked.rs  mod.rs  wad.rs
aetheris/src/infrastructure/: audio.rs  menu.rs  mod.rs  music.rs  music_parser.rs  savegame.rs
aetheris/src/presentation/: classic_engine.rs  mod.rs  visual_test.rs
aetheris/src/simulation/: engine.rs  mod.rs
aetheris_doom/: Cargo.toml
aetheris_doom/src/: bridge.rs  doom.rs  lib.rs  main.rs
